import org.apache.tools.ant.filters.ReplaceTokens

apply plugin: 'java'

group = 'net.phroa'
version = '1.0-SNAPSHOT'

sourceCompatibility = '1.14'
targetCompatibility = '1.14'

tasks.withType(Jar) {
    destinationDirectory = file('server/plugins')
}

repositories {
    mavenCentral()
    maven {
        name = 'papermc-repo'
        url = 'https://papermc.io/repo/repository/maven-public/'
    }
    maven {
        name = 'sonatype'
        url = 'https://oss.sonatype.org/content/groups/public/'
    }
}

dependencies {
    compile 'com.destroystokyo.paper:paper-api:1.16.4-R0.1-SNAPSHOT'
    testCompile 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

processResources {
    from(sourceSets.main.resources.srcDirs) {
        filter ReplaceTokens, tokens: [version: version]
    }
}

test {
    testLogging {
        exceptionFormat = "full"
        showStandardStreams = true
    }

    useJUnitPlatform()
}
